<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btnStats"
        android:icon="@drawable/ic_stats"
        android:title="@string/stats"/>
    <item
        android:id="@+id/btnTrend"
        android:icon="@drawable/ic_trend"
        android:title="@string/trends"/>
    <item
        android:id="@+id/btnSymptomChecker"
        android:icon="@drawable/ic_symptom"
        android:title="@string/symptom_checker"/>
    <item
        android:id="@+id/btnVnVac"
        android:icon="@drawable/ic_flag_vn"
        android:title="@string/vietnam_vaccine"/>
    <item
        android:id="@+id/btnWorldVac"
        android:icon="@drawable/ic_public"
        android:title="@string/world_vaccine"/>
    <item
        android:id="@+id/btnVnVsWorld"
        android:icon="@drawable/ic_compare"
        android:title="@string/vietnam_vs_world"/>
</menu>
